frontend/src/tasks/tasks.css
.container {
  margin: 0 15px;
  height: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: stretch;
}

.row {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-content: space-around;
  margin: 0 -15px;
}
.row--start {
  justify-content: flex-start;
}
.row--end {
  justify-content: flex-end;
}
.row--between {
  justify-content: space-between;
}
.row--expand {
  flex: 1 1 auto;
}
.row--gutter-left {
  margin-left: 0 !important;
}
.row--gutter-right {
  margin-right: 0 !important;
}
.row--gutter {
  margin-left: 0 !important;
  margin-right: 0 !important;
}

.col {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: space-around;
  margin: 0 15px;
}
.col--start {
  justify-content: flex-start;
}
.col--end {
  justify-content: flex-end;
}
.col--between {
  justify-content: space-between;
}
.col--expand {
  flex: 1 1 auto;
}
.col--no-gutter-left {
  margin-left: 0 !important;
}
.col--no-gutter-right {
  margin-right: 0 !important;
}
.col--no-gutter {
  margin-left: 0 !important;
  margin-right: 0 !important;
}

.tasks .tasks-create {
  height: 226px;
  width: 277px;
  border: 1px solid #f0405e;
  border-radius: 3px;
}
.tasks .tasks-create__section-header {
  padding-bottom: 1px;
}
.tasks .tasks-create__label {
  font-family: AvenirNext-Medium;
  font-size: 9px;
  color: #161318;
  letter-spacing: 0;
  height: 12px;
  margin-bottom: 3px;
  margin-top: 9px;
  padding-left: 0.5px;
}
.tasks .tasks-create__input-group {
  margin: 0 11.5px !important;
  padding-bottom: 2px;
}
.tasks .tasks-create__input-group--last {
  padding-top: 1px;
}
.tasks .tasks-create__input-group--site {
  padding-left: 14px;
}
.tasks .tasks-create__input-group--sizes {
  margin-right: 14px !important;
}
.tasks .tasks-create__input {
  font-family: AvenirNext-Medium;
  font-size: 9px;
  color: #161318;
  letter-spacing: 0;
}
.tasks .tasks-create__input--bordered {
  border: 1px solid #F0405E;
}
.tasks .tasks-create__input--field {
  width: 119px;
  height: 29px;
}
.tasks .tasks-create__input--field:disabled {
  background: #e5e5e5;
  cursor: not-allowed;
}
.tasks .tasks-create__submit-row {
  align-self: flex-end;
}
.tasks .tasks-create__submit {
  margin-right: -1px;
  width: 83px;
  height: 29px;
  cursor: pointer;
  background: #F0405E;
  border: none;
  border-radius: 3px;
  font-family: AvenirNext-Medium;
  font-size: 12px;
  color: #EFEFEF;
  letter-spacing: 0;
}

.tasks .tasks-log__header__output, .tasks .tasks-log__header__site, .tasks .tasks-log__header__id {
  margin: 0;
}
.tasks .tasks-log__header__output > p, .tasks .tasks-log__header__site > p, .tasks .tasks-log__header__id > p {
  font-family: AvenirNext-Medium;
  font-size: 12px;
  color: #161318;
  letter-spacing: 0;
  margin: 5px 0;
}

.tasks .tasks-log-container {
  width: 504px;
  height: 300px;
  border: 1px solid #F0405E;
  border-radius: 3px;
}
.tasks .tasks-log-container .tasks-table__wrapper {
  min-width: 0;
  width: 100%;
  overflow: hidden;
  display: block;
}
.tasks .tasks-table {
  border-collapse: collapse;
  border-spacing: 0 10px;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
}
.tasks .tasks-table__section-header {
  padding-top: 1px;
}
.tasks .tasks-table .blank {
  padding-left: 10px;
}
.tasks .tasks-table .extend {
  padding-right: 4px;
}
.tasks .tasks-table .pad-left {
  padding-left: 5px;
  padding-bottom: 0;
}
.tasks .tasks-table .tasks-row-container {
  border-bottom: #dfdfdf solid 1px;
}
.tasks .tasks-table .tasks-row-container .tasks-row {
  display: flex;
  height: 30px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__log--id {
  width: 7px;
  margin-left: -1px;
  padding-left: 14px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__log--site {
  width: 116px;
  padding-left: 3px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__log--output {
  width: 440px;
  padding-left: 5px;
}
.tasks .tasks-log {
  width: 504px;
  height: 300px;
  border-radius: 3px;
}
.tasks .tasks-log__section-header {
  padding-top: 1px;
  padding-bottom: 2px;
}
.tasks .tasks-log__header {
  padding-bottom: 1px;
}
.tasks .tasks-log__header__id {
  width: 7px;
  padding-left: 14px;
}
.tasks .tasks-log__header__site {
  width: 60px;
  padding-left: 18px;
}
.tasks .tasks-log__header__output {
  width: 40px;
  padding-left: 50px;
}

.tasks .tasks-table .tasks-row-container .tasks-row__sizes, .tasks .tasks-table .tasks-row-container .tasks-row__profile, .tasks .tasks-table .tasks-row-container .tasks-row__product {
  text-transform: uppercase;
  text-overflow: ellipsis;
}

.tasks .tasks-table-container .tasks-table__header .tasks-table__header__actions, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__pairs, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__sizes, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__profile, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__sites, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__product, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__id, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__edit {
  margin: 0;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__actions > p, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__pairs > p, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__sizes > p, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__profile > p, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__sites > p, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__product > p, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__id > p, .tasks .tasks-table-container .tasks-table__header .tasks-table__header__edit > p {
  font-family: AvenirNext-Medium;
  font-size: 12px;
  color: #161318;
  letter-spacing: 0;
  margin: 5px 0;
}

.tasks .tasks-table-container {
  width: 741px;
  height: 300px;
  border: 1px solid #F0405E;
  border-radius: 3px;
  margin: 0 16px 0 0 !important;
}
.tasks .tasks-table-container .tasks-table__wrapper {
  min-width: 0;
  width: 100%;
  overflow: hidden;
  display: block;
}
.tasks .tasks-table-container .tasks-table__header {
  margin: 0;
  padding-bottom: 1px;
  height: 26px;
  min-height: 26px;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__edit {
  width: 16px;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__id {
  width: 26px;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__id > p {
  text-align: center;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__product {
  width: 129px;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__sites {
  width: 73px;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__profile {
  width: 268px;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__sizes {
  width: 54px;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__pairs {
  width: 50px;
}
.tasks .tasks-table-container .tasks-table__header .tasks-table__header__actions {
  width: 50px;
}
.tasks .tasks-table {
  border-collapse: collapse;
  border-spacing: 0 10px;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
}
.tasks .tasks-table__section-header {
  padding-top: 1px;
}
.tasks .tasks-table .blank {
  padding-left: 10px;
}
.tasks .tasks-table .extend {
  padding-right: 4px;
}
.tasks .tasks-table .pad-left {
  padding-left: 5px;
  padding-bottom: 0;
}
.tasks .tasks-table .tasks-row-container {
  border-bottom: #dfdfdf solid 1px;
}
.tasks .tasks-table .tasks-row-container .tasks-row {
  display: flex;
  height: 30px;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit {
  padding: 10px;
  height: 80px;
  align-items: flex-start;
  border: #b8d9d2 solid 1px;
  margin: 0 -5px 5px -5px;
  border-radius: 3px !important;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .edit-field {
  vertical-align: middle;
  margin: 0 7px !important;
  width: 100px;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .edit-field__label {
  margin: 0;
  font-family: AvenirNext-Medium;
  font-size: 9px;
  color: #161318;
  letter-spacing: 0;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .edit-field__select {
  font-family: AvenirNext-Medium;
  font-size: 9px;
  color: #161318;
  letter-spacing: 0;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .edit-field__select:disabled {
  background: #e5e5e5;
  cursor: not-allowed;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .edit-field__input {
  vertical-align: middle;
  height: 29px;
  border: #F0405E solid 1px;
  border-radius: 3px;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .edit-field__input:disabled {
  background: #e5e5e5;
  cursor: not-allowed;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .action {
  margin: 12px 7px 0 7px;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .action__button {
  width: 83px;
  height: 29px;
  cursor: pointer;
  border: none;
  border-radius: 3px;
  font-family: AvenirNext-Medium;
  font-size: 12px;
  color: #EFEFEF;
  letter-spacing: 0;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .action__button--cancel {
  background: #46ADB4;
}
.tasks .tasks-table .tasks-row-container .tasks-row.tasks-row--edit .action__button--save {
  background: #F0405E;
}
.tasks .tasks-table .tasks-row-container .tasks-row img {
  cursor: pointer;
  vertical-align: middle;
}
.tasks .tasks-table .tasks-row-container .tasks-row__edit {
  width: 16px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__id {
  width: 26px;
  text-align: center;
}
.tasks .tasks-table .tasks-row-container .tasks-row__product {
  width: 129px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__sites {
  text-overflow: ellipsis;
  width: 73px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__profile {
  width: 268px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__profile > p {
  text-overflow: ellipsis;
}
.tasks .tasks-table .tasks-row-container .tasks-row__sizes {
  width: 54px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__account {
  width: 50px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__actions {
  width: 50px;
}
.tasks .tasks-table .tasks-row-container .tasks-row__actions__button {
  padding-bottom: 3px;
  width: 16px;
}

.view-line {
  margin: 0;
  border: 1px solid #EDBCC6;
  flex: 1 1 100%;
}

.section-header {
  max-height: 32px;
  margin: 6px 0;
}
.section-header.section-header--no-top {
  margin-top: 0;
}

.tasks__title {
  padding-top: 1px !important;
  padding-bottom: 3px !important;
}

.bulk-action-sidebar .bulk-action-sidebar__button {
  padding-bottom: 15px;
  cursor: pointer;
}

/* Temporary */
.temp-debug {
  background-color: gray;
}

/*# sourceMappingURL=tasks.css.map */

